added new package

--- a/demos/index.html
+++ b/demos/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
-	<script type="text/javascript" src="./../packages/core/dist/grafik.js"></script>
+	<script type="text/javascript" src="./../packages/vanilla/dist/grafik.js"></script>
 </head>
 <body>
-
-<script type="text/javascript" src="core.js"></script>
+	<div id="wrap"></div>
+	<script type="text/javascript" src="vanilla.js"></script>
 </body>
 </html>
