--- a/demos/react.html
+++ b/demos/react.html
@@ -6,8 +6,36 @@
 	<title></title>
 	<script type="text/javascript" src="./../node_modules/react/umd/react.development.js"></script>
 	<script type="text/javascript" src="./../node_modules/react-dom/umd/react-dom.development.js"></script>
-	<script type="text/javascript" src="./../packages/core/dist/grafik.js"></script>
+	<script type="text/javascript" src="./../packages/vanilla/dist/grafik.js"></script>
 	<script type="text/javascript" src="./../packages/react/dist/grafik-react.js"></script>
+	<style type="text/css">
+		body {
+			margin: 0;
+		}
+		.grafik-wrapper {
+			position: relative;
+		}
+		.grafik-canvas,
+		.grafik-interactive {
+			position: absolute;
+			display: block;
+			width: 100%;
+			height: 100%;
+		}
+		.grafik-control {
+			position: absolute;
+			background: rgba(0, 0, 0, 0.2);
+			border: dashed 1px #888;
+		}
+		.grafik-control-node {
+			position: absolute;
+			width: 20px;
+			height: 20px;
+			background: forestgreen;
+			border-radius: 100%;
+			transform: translate(-50%, -50%);
+		}
+	</style>
 </head>
 <body>
 	<div id="wrap"></div>
