--- a/demos/react.html
+++ b/demos/react.html
@@ -14,52 +14,7 @@
 			margin: auto;
 		}
 		.grafik-wrapper {
-			position: relative;
-		}
-		.grafik-canvas,
-		.grafik-interactive {
-			position: absolute;
-			display: block;
-			width: 100%;
-			height: 100%;
-		}
-		.grafik-control {
-			position: absolute;
-			background: rgba(0, 0, 0, 0.2);
-			border: dashed 1px #888;
-		}
-		.grafik-control-node {
-			position: absolute;
-			width: 16px;
-			height: 16px;
-			background: forestgreen;
-			border-radius: 100%;
-			transform: translate(-50%, -50%);
-			cursor: pointer;
-		}
-		.grafik-control-node__o {
-			width: 8px;
-			height: 8px;
-			background: transparent;
-			border: solid 2px forestgreen;
-		}
-		.grafik-control-node__o:before,
-		.grafik-control-node__o:after {
-			content: "";
-			position: absolute;
-			display: inline-block;
-			left: 50%;
-			top: 50%;
-			background: forestgreen;
-			transform: translate(-50%, -50%);
-		}
-		.grafik-control-node__o:before {
-			width: 20px;
-			height: 1px;
-		}
-		.grafik-control-node__o:after {
-			width: 1px;
-			height: 20px;
+			border: solid 1px #aaa;
 		}
 	</style>
 </head>
