--- a/demos/react.html
+++ b/demos/react.html
@@ -11,9 +11,11 @@
 	<style type="text/css">
 		#wrap {
 			width: 1200px;
+			max-width: 100%;
 			margin: auto;
 		}
 		.grafik-wrapper {
+			max-width: 100%;
 			border: solid 1px #aaa;
 		}
 	</style>
