--- a/demos/vue.html
+++ b/demos/vue.html
@@ -11,6 +11,8 @@
 			margin: auto;
 		}
 		.grafik-wrapper {
+			width: 1200px;
+			height: 800px;
 			max-width: 100%;
 			border: solid 1px #aaa;
 		}
