--- a/demos/vue.html
+++ b/demos/vue.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--<script src="./../packages/vue/dist/grafik-vue.js"></script>-->
 	<style type="text/css">
+		body {
+			background-color: #313131;
+		}
 		#wrap {
 			width: 1200px;
 			max-width: 100%;
