--- a/demos/vue.html
+++ b/demos/vue.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--<script src="./../packages/vue/dist/grafik-vue.js"></script>-->
+	<script src="./../packages/core/dist/grafik.js"></script>
+	<script src="./../packages/vue/dist/grafik-vue.js"></script>
 	<style type="text/css">
 		body {
 			background-color: #313131;
