Introduced Exporter api, and fixed some bugs

--- a/demos/vue.html
+++ b/demos/vue.html
@@ -7,6 +7,7 @@
 	<script src="./../packages/vue/dist/grafik-vue.js"></script>
 	<style type="text/css">
 		body {
+			color: #aaa;
 			background-color: #313131;
 		}
 		#wrap {
