--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="./../packages/core/dist/grafik.js"></script>
-	<script src="./../packages/vue/dist/grafik-vue.js"></script>
+	<title>Grafik.JS</title>
 	<style type="text/css">
 		body {
 			color: #aaa;
