Made some changes

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 			border: solid 1px #aaa;
 		}
 	</style>
+	<script type="text/javascript" src="core.js"></script>
 </head>
 <body>
 	<div id="wrap"></div>
